@@ -829,7 +829,8 @@ The following debug values may be used:
     Scrobbling                 65536   0x00010000
     Devices                   131072   0x00020000
     SQL                       262144   0x00040000
-    Other                     524288   0x00080000 (e.g. MediaKeys)
+    MPD HTTP stream playback  524288   0x00080000
+    Other                    1048576   0x00100000 (e.g. MediaKeys)
 
 These values may be combined to enable multiple output. e.g. to enable MPD and
 covers logging:
